--- a/css/styles.css
+++ b/css/styles.css
@@ -468,6 +468,60 @@ textarea {
 .team-link-icon-footer:focus {
   background-color: #31d0aa;
 }
+/* #region footer form */
+/* .div-subscribe {
+} */
+.subscribe-text {
+  margin-bottom: 16px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+}
+.form-subscribe {
+  display: flex;
+  gap: 24px;
+}
+/* .subscribe-label {
+} */
+.subscribe-input {
+  width: 264px;
+  height: 40px;
+  border: 1px solid #ffffff;
+  background-color: transparent;
+  font-size: 12px;
+  line-height: 200%;
+  letter-spacing: 0.04em;
+  padding-left: 16px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  color: #ffffff;
+}
+input::placeholder {
+  color: #ffffff;
+}
+.button-subscribe {
+  min-width: 165px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+  background-color: #4d5ae5;
+  border: none;
+  border-radius: 4px;
+}
+.plane {
+  margin-left: 16px;
+}
+/* #endregion */
 
 /* #region modal window */
 .backdrop {
@@ -476,45 +530,26 @@ textarea {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: 10000;
   background-color: rgba(46, 47, 66, 0.4);
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-  transition: opacity 300ms ease-in, visibility 300ms ease-in;
-  transition-delay: 300ms;
-}
-.backdrop.is-open {
-  opacity: 1;
-  visibility: visible;
-  pointer-events: initial;
-  transition-delay: 0ms;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translateX(-50%) translateY(-50%) scale(0.2);
-
+  transform: translateX(-50%) translateY(-50%) scale(1);
   width: 408px;
   min-height: 584px;
   background-color: #fcfcfc;
   border-radius: 4px;
-  padding: 24px;
-  opacity: 0;
-  transition: transform 300ms cubic-bezier(0.68, -0.55, 0.27, 1.55),
-    opacity 300ms cubic-bezier(0.68, -0.55, 0.27, 1.55);
-  transition-delay: 0ms;
-}
-.backdrop.is-open .modal {
-  opacity: 1;
-  transform: translateX(-50%) translateY(-50%) scale(1);
-  transition-delay: 300ms;
+  transform: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 72px 24px 24px 24px;
 }
 .modal-button {
   position: absolute;
   top: 24px;
-  left: 24px;
+  right: 24px;
   width: 24px;
   height: 24px;
   display: flex;
@@ -522,12 +557,28 @@ textarea {
   justify-content: center;
   background-color: #e7e9fc;
   border-radius: 50%;
-  stroke: rgba(0, 0, 0, 0.1);
+  border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0;
-  margin-bottom: 24px;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-button:hover {
+  background-color: #404bbf;
+  border: none;
+}
+.modal-button:focus {
+  background-color: #404bbf;
+  border: none;
 }
 .modal-button-icon {
-  fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-button-icon:hover {
+  fill: #ffffff;
+}
+.modal-button-icon:focus {
+  fill: #ffffff;
 }
 .modal-p {
   font-weight: 500;
@@ -541,10 +592,10 @@ textarea {
 /* .modal-form {
 } */
 .modal-form-field {
-  gap: 8px;
+  margin-bottom: 8px;
 }
 .modal-form-label {
-  font-weight: 400;
+  display: block;
   font-size: 12px;
   line-height: 117%;
   letter-spacing: 0.04em;
@@ -557,10 +608,11 @@ textarea {
 .modal-form-input {
   width: 100%;
   height: 40px;
-  border: 1px solid #2e2f42;
+  border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 4px;
-  transition: border-color 300ms ease-in;
-  padding-left: 16px;
+  background-color: transparent;
+  padding-left: 38px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   outline: transparent;
 }
 .modal-form-input:focus {
@@ -569,47 +621,83 @@ textarea {
 .modal-form-icon {
   position: absolute;
   top: 50%;
-  left: 16;
+  left: 16px;
   transform: translateY(-50%);
   fill: #2e2f42;
-  transition: stroke 300ms ease-in;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-form-input:focus + .modal-form-icon {
-  stroke: #4d5ae5;
+  fill: #4d5ae5;
 }
-textarea::placeholder {
-  font-weight: 400;
+.modal-form-comment {
+  margin-bottom: 16px;
+}
+/* .modal-form-lable {
+
+} */
+.modal-form-textarea {
+  width: 100%;
+  height: 120px;
   font-size: 12px;
   line-height: 117%;
   letter-spacing: 0.04em;
-  color: #2e2f4266;
-}
-textarea:placeholder-shown {
-  resize: none;
-}
-.modal-form-textarea {
-  display: block;
-  width: 100%;
-  height: 120px;
-  padding: 16px 8px;
+  color: rgba(46, 47, 66, 0.4);
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  padding: 8px 16px;
+  background-color: transparent;
+  border-radius: 4px;
   outline: transparent;
   resize: none;
-  transition: border-color 300ms ease-in;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-form-textarea:focus {
   border-color: #4d5ae5;
 }
-
 .modal-form-checkbox {
+  margin-bottom: 24px;
+}
+.input-checkbox {
+}
+.modal-form-checkbox-label {
+  font-size: 12px;
+  line-height: 117%;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+.span-checkbox {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  fill: transparent;
 }
-.span-checkbox {
-}
-.checkbox-icon {
+.input-checkbox:checked + .span-checkbox {
+  background-color: #404bbf;
+  fill: #f4f4fd;
+  border: none;
 }
 .privacy-policy-link {
   color: #4d5ae5;
+}
+.button-checkbox {
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  line-height: 150%;
+  letter-spacing: 0.04em;
+  font-weight: 500;
+  color: #ffffff;
+  cursor: pointer;
+  background-color: #4d5ae5;
+  border: none;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* #endregion */
