--- a/css/styles.css
+++ b/css/styles.css
@@ -543,8 +543,10 @@ input::placeholder {
   min-height: 584px;
   background-color: #fcfcfc;
   border-radius: 4px;
-  transform: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 72px 24px 24px 24px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 .modal-button {
   position: absolute;
@@ -574,10 +576,10 @@ input::placeholder {
 .modal-button-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-button-icon:hover {
+.modal-button:hover + .modal-button-icon {
   fill: #ffffff;
 }
-.modal-button-icon:focus {
+.modal-button:focus + .modal-button-icon {
   fill: #ffffff;
 }
 .modal-p {
