--- a/css/styles.css
+++ b/css/styles.css
@@ -576,10 +576,10 @@ input::placeholder {
 .modal-button-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-button:hover + .modal-button-icon {
+.modal-button:hover .modal-button-icon {
   fill: #ffffff;
 }
-.modal-button:focus + .modal-button-icon {
+.modal-button:focus .modal-button-icon {
   fill: #ffffff;
 }
 .modal-p {
@@ -679,7 +679,7 @@ input::placeholder {
   justify-content: center;
   fill: transparent;
 }
-.input-checkbox:checked + .span-checkbox {
+.input:checked + .modal-form-checkbox-label > .span-checkbox {
   background-color: #404bbf;
   fill: #f4f4fd;
   border: none;
