--- a/css/styles.css
+++ b/css/styles.css
@@ -679,7 +679,7 @@ input::placeholder {
   justify-content: center;
   fill: transparent;
 }
-.input:checked + .modal-form-checkbox-label > .span-checkbox {
+input:checked + .modal-form-checkbox-label > .span-checkbox {
   background-color: #404bbf;
   fill: #f4f4fd;
   border: none;
